--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PracticalTest</string>
+    <string name="app_name">noixa</string>
     <string name="api_key">3d51ecb5ddbf43c4c9ed6c31936f17a930aab5e68ecb5ba6ef45837f45b193f6</string>
     <string name="set_method">userLogin</string>
     <string name="set_one_signal_id">asdfw3423df</string>
